tests/base/parser/bad/exps/exp_t-match-spid-underscore.scilexp
let a = True in
match a wiff (* Phonetic typo *)
| _ => True
end
